# helios

./: .env.example  .gitignore  AGENTS.md  README.md  TEAM_MEMBER_1_HELIOS_RUNTIME.md  TEAM_MEMBER_2_CONTROL_PLANE.md  eslint.config.mjs  next-steps.md  next.config.ts  package-lock.json  package.json  tsconfig.json
krishang/: .env.example  .gitignore  README.md  pyproject.toml
krishang/adapters/: .gitignore
krishang/adapters/promoted/: README.md
krishang/agents/: baseline.yaml
krishang/fixtures/: canonical_event.json  task.json
krishang/ollama/: css-slm.Modelfile  html-slm.Modelfile  javascript-slm.Modelfile
krishang/src/helios/: __init__.py  clock.py  config.py  health.py  ids.py  main.py  runtime.py  site_generation.py  site_orchestration.py
krishang/src/helios/agency/: __init__.py  adjust.py  escalation.py  head.py  registry.py  reservoir.py  spawn.py
krishang/src/helios/api/: app.py  auth.py  evals.py  health.py  models.py  roles.py  site.py
krishang/src/helios/contracts/: __init__.py  adapter.py  artifact.py  build.py  common.py  plan.py  security.py  task.py  trace.py
krishang/src/helios/control_plane/: __init__.py  base.py  convex_http.py  in_memory.py  local_cache.py  outbox.py
krishang/src/helios/demo/: __init__.py  fixtures.py  seed_runtime.py
krishang/src/helios/evals/: __init__.py  member3.py  run.py
krishang/src/helios/execution/: __init__.py  services.py
krishang/src/helios/experts/: __init__.py  base.py  model.py  registry.py  security.py
krishang/src/helios/models/: __init__.py  adapters.py  bootstrap.py  client.py  manager.py  registry.py  (+3 more)
krishang/tests/: conftest.py  test_agent_reservoir_e2e.py  test_api_fixtures.py  test_contracts_planning.py  test_control_plane_integration.py  test_execution_services.py  test_model_boundary.py  test_models_agency.py  test_modes.py  test_reliability.py  test_repository_tasks.py  test_runtime_controls.py  test_runtime_demo.py  test_safety.py  test_scheduler.py  test_site_generation.py  test_site_orchestration.py
krishang/training/: .gitignore  README.md  pyproject.toml
krishang/training/configs/: css.yaml  html.yaml  javascript.yaml
krishang/training/datasets/: README.md
krishang/training/schemas/: dataset-record.schema.json  promotion-manifest.example.json
krishang/workspace/: README.md
member 3/: .gitignore  README.md  VERIFICATION.md  pyproject.toml
member 3/adapters/: README.md
member 3/adapters/manifests/: manifest.example.json
member 3/adapters/promoted/: README.md
member 3/benchmarks/: README.md  run_fast_lane.py
member 3/datasets/: README.md
member 3/datasets/manifests/: README.md
member 3/datasets/processed/: README.md
member 3/docs/: failure-matrix.md  integration-contracts.md
member 3/docs/runbooks/: emergency-and-demo.md  evaluation.md  mode-usage.md  security-and-consent.md  startup.md  training-and-promotion.md
member 3/evals/gauntlet/: build_cases.py  cases-v1.jsonl  manifest-v1.json
member 3/evals/reports/: README.md
member 3/evals/snapshots/: README.md
member 3/evals/tests/: test_evaluation.py
member 3/evidence/: README.md  __init__.py  index.example.json  rehearsal-log.md  run-ids.md  urls.md  validate_index.py
member 3/evidence/adapters/: README.md
member 3/evidence/alerts/: README.md
member 3/evidence/builds/: README.md
member 3/evidence/evals/: README.md
member 3/evidence/power-ups/: README.md
member 3/evidence/recordings/: README.md
member 3/evidence/screenshots/: README.md
member 3/evidence/security/: README.md
member 3/gateway/: README.md
member 3/gateway/tests/: test_control_plane_contract.py  test_gateway.py  test_reliability.py
member 3/tests/e2e/: test_proof_contracts.py
member 3/training/configs/: dataset.yaml  triage-qlora.example.yaml
member 3/training/tests/: test_curation.py  test_governance.py  test_training_lifecycle.py
(+185 files in other folders)
