[project]
name = "helios-runtime"
version = "0.1.0"
description = "Credential-free Helios execution plane for the Hermes maintainer agency"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "psutil>=6.0",
  "pyyaml>=6.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
test = ["pytest>=8.3", "pytest-asyncio>=0.24"]

[project.scripts]
helios-runtime = "helios.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helios"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

