[project]
name = "helios-web-slm-training"
version = "0.1.0"
description = "Training and promotion tooling for Helios Gemma web specialists"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
train = [
  "accelerate>=1.2",
  "bitsandbytes>=0.45; platform_system != 'Darwin'",
  "datasets>=3.2",
  "peft>=0.14",
  "safetensors>=0.5",
  "torch>=2.5",
  "transformers>=4.50",
  "trl>=0.15",
]

[project.scripts]
helios-slm = "helios_slm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/helios_slm"]
